--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,8 @@ plugins {
     id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'maven-publish'
 }
-
 version = project.mod_version
 group = project.maven_group
-
 repositories {
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
@@ -14,6 +12,10 @@ repositories {
     // for more information about repositories.
     maven { url "https://maven.shedaniel.me/" }
     maven {url "https://maven.terraformersmc.com/"}
+    maven {
+        name 'JitPack'
+        url 'https://jitpack.io'
+    }
 }
 
 dependencies {
@@ -21,15 +23,21 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
     modApi("me.shedaniel.cloth:cloth-config-fabric:6.1.48") {
         exclude(group: "net.fabricmc.fabric-api")
     }
 
-    modImplementation "com.terraformersmc:modmenu:3.0.1"
+    include(modImplementation ("com.terraformersmc:modmenu:3.0.1"))
+    // implementation 'com.github.thatgravyboat:DiscordIPC:d813b27'
+    include(implementation ('com.github.jagrosh:DiscordIPC:ff8c5b73ee'))
+    include(implementation("org.json:json:20171018"))
+    include(implementation("org.slf4j:slf4j-api:1.7.25"))
+    include(implementation("com.kohlschutter.junixsocket:junixsocket-common:2.0.4"))
+
+    modImplementation files("src/main/java/thegu5/islesplus/jars/slotlock-1.0.4-BETA+1.18.jar")
+    modImplementation files("src/main/java/thegu5/islesplus/jars/no-telemetry-1.3.0.jar")
 }
 
 processResources {
@@ -85,5 +93,6 @@ publishing {
         // Notice: This block does NOT have the same function as the block in the top level.
         // The repositories here will be used for publishing your artifact, not for
         // retrieving dependencies.
+
     }
 }
