--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.18
 loader_version=0.12.12
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=0.1.1
 maven_group=thegu5
-archives_base_name=isles-addons
+archives_base_name=isles-plus
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.45.2+1.18
