--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,32 @@
-name: Fabric CI
+name: Build
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ master ]
+    branches:
+      - '*'
 
 jobs:
-  buildAndRunForSomeVersions:
-    name: Run tests for ${{ matrix.minecraftVersion }}
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        minecraftVersion:
-          - 1.18.1
-          - latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: Setup java
+        uses: actions/setup-java@v2
         with:
-          lfs: true
-      - uses: Geometrically/fabric-test-runner@v1
-        id: testRunner
+          java-version: 16
+          distribution: zulu
+          cache: gradle
+
+      - name: Build mod
+        run: |
+          chmod +x ./gradlew && ./gradlew build --no-daemon
+          
+      - name: Upload mod as artifact
+        uses: actions/upload-artifact@v2
         with:
-          minecraftVersion: ${{ matrix.minecraftVersion }}
-      - uses: actions/upload-artifact@v1
-        with:
-          name: Builds
-          path: build/libs
+          path: build/libs/*
