--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,29 @@
-name: Build
+name: Fabric CI
 
 on:
   push:
-    branches:
-      - '*'
+    branches: [ master ]
   pull_request:
-    branches:
-      - '*'
+    branches: [ master ]
 
 jobs:
-  build:
+  runTests:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
+    - name: "Checkout Project"
+      uses: actions/checkout@v2
+      with:
+        lfs: true
 
-      - name: Setup java
-        uses: actions/setup-java@v2
-        with:
-          java-version: 16
-          distribution: zulu
-          cache: gradle
-
-      - name: Build mod
-        run: |
-          chmod +x ./gradlew && ./gradlew build --no-daemon
-          
-      - name: Upload mod as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          path: build/libs/*
+    - name: "Run Fabric Tests"
+      uses: Geometrically/fabric-test-runner@v1
+      with:
+        minecraftVersion: 1.18.1
+        runServerTest: false
+    
+    - name: "Upload Artifact"
+      uses: actions/upload-artifact@v1
+      with:
+        name: Builds
+        path: build/libs
